--- a/components/DrawerList/DrawerList.scss
+++ b/components/DrawerList/DrawerList.scss
@@ -1,7 +1,8 @@
 @import "../../src/mixin";
 
 .container{
-  @include box(300px,100%);
+  width: 300px;
+  height: 100%;
   box-sizing: border-box;
   padding-top: 138px;
   background: #393857;
