--- a/src/router.scss
+++ b/src/router.scss
@@ -1,10 +1,39 @@
 @import "mixin";
 
-.container{
-  @include box(100vw,100vh);
+.container {
+  @include box(100vw, 100vh);
   background: url("http://qiniu.goudanxi.com/layout_bg.png") no-repeat;
-  background-size:100% 440px;
+  background-size: 100% 440px;
   box-sizing: border-box;
   padding: 92px 0 0;
   position: relative;
+
+  .drawerBtn {
+    width: 36px;
+    height: 30px;
+    position: absolute;
+    top: 30px;
+    left: 44px;
+    background: url("http://qiniu.goudanxi.com/drawer_icon.png") no-repeat;
+    background-size: 100% 100%;
+  }
+
+  .toptext {
+    font-size: 24px;
+    position: absolute;
+    color: #fff;
+    top: 30px;
+    right: 108px;
+    font-weight: bold;
+  }
+
+  .topbg{
+    width: 48px;
+    height: 49px;
+    background: url("http://qiniu.goudanxi.com/layout_top.png") no-repeat;
+    background-size: 100% 100%;
+    position: absolute;
+    right: 45px;
+    top:22px;
+  }
 }
