--- a/components/DrawerList/DrawerList.scss
+++ b/components/DrawerList/DrawerList.scss
@@ -50,9 +50,18 @@
     }
 
     .listName {
-      font-size: 26px;
-      font-weight: bold;
+      font-size: 24px;
       padding-left: 20px;
+      font-weight: bold;
+    }
+
+
+    .listBox{
+      @include box(100%,100%);
+      &.active{
+        background: #30303d;
+        opacity: 1;
+      }
     }
   }
 }
