--- a/components/item/post.scss
+++ b/components/item/post.scss
@@ -1,7 +1,7 @@
 .container{
   box-sizing: border-box;
   width: 88%;
-  margin: 40px auto;
+  margin: 40px auto 100px;
 
   .title{
     font-size: 32px;
@@ -10,7 +10,7 @@
   }
 
   .time{
-    margin-top: 20px;
+    margin-top: 30px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -26,7 +26,7 @@
   .postContent{
     font-size: 26px;
     color: #333;
-    margin-top: 20px;
+    margin-top: 30px;
     line-height: 1.8;
   }
 
@@ -35,7 +35,7 @@
     box-sizing: border-box;
     padding: 4px;
     border: 1px solid #ddd;
-    margin: 20px auto 0;
+    margin: 30px auto 0;
     object-fit: cover;
     width: 88%;
     height: 240px;
@@ -46,6 +46,6 @@
     width: 200px;
     height: 2px;
     background: #ddd;
-    margin: 60px auto 0;
+    margin: 100px auto 0;
   }
 }
