--- a/components/item/post.scss
+++ b/components/item/post.scss
@@ -2,11 +2,13 @@
   box-sizing: border-box;
   width: 88%;
   margin: 40px auto 100px;
+  display: block;
 
   .title{
     font-size: 32px;
     color: #333;
     text-align: center;
+    font-weight: bolder;
   }
 
   .time{
@@ -43,9 +45,23 @@
 
   .line{
     display: block;
-    width: 200px;
+    width: 300px;
     height: 2px;
     background: #ddd;
     margin: 100px auto 0;
+  }
+
+  .moreBtn{
+    width: 200px;
+    height: 80px;
+    line-height: 80px;
+    font-size: 30px;
+    display: block;
+    background: #6654b4;
+    text-align: center;
+    border-radius: 12px;
+    box-shadow: -2px 4px 12px 0 rgba(88, 68, 176, 0.6);
+    color: #fff;
+    margin: 40px auto 0;
   }
 }
