add markdown style

--- a/src/page/code/content.scss
+++ b/src/page/code/content.scss
@@ -2,5 +2,12 @@
   .markdown-body{
     box-sizing: border-box;
     padding: 20px;
+
+    p{
+      font-size: 28px;
+    }
+    li{
+      font-size: 28px;
+    }
   }
 }
