--- a/src/page/code/swiper.scss
+++ b/src/page/code/swiper.scss
@@ -19,6 +19,10 @@
     font-size: 24px;
     color: #999;
 
+    i{
+      font-size: 24px;
+    }
+
     span{
       margin-left: 10px;
       font-size: 26px;
